# seikan

./: .gitmodules  README.md
wireguard-baremetal/: .gitignore  CMakeLists.txt  Containerfile  README.md  build.py  build.sh  conftest.py  container-entrypoint.sh  pytest.ini  pytest_veriguard.py  sdkconfig.defaults  sdkconfig.development  sdkconfig.release  sdkconfig.secrets.example
wireguard-baremetal/bindings/: README.md  alire.toml  bindings.gpr
wireguard-baremetal/bindings/src/: bindings.ads  wireguard_c_abi.adb  wireguard_c_abi.ads
wireguard-baremetal/crypto/: README.md  alire.toml  crypto.gpr  crypto_test.gpr
wireguard-baremetal/crypto/src/: crypto.ads
wireguard-baremetal/crypto/src/bindings/: crypto-esp_idf.ads  crypto-host.ads
wireguard-baremetal/crypto/src/implementation/: crypto-blake2.adb  crypto-chacha20poly1305.adb  crypto-random.adb  crypto-tai64n.adb  crypto-x25519.adb
wireguard-baremetal/crypto/src/implementations/esp_idf/: crypto-random.adb
wireguard-baremetal/crypto/src/interfaces/: crypto-blake2.ads  crypto-chacha20poly1305.ads  crypto-random.ads  crypto-tai64n.ads  crypto-x25519.ads
wireguard-baremetal/crypto/src/platform/blake2_ref/: crypto-blake2_ref.ads
wireguard-baremetal/crypto/src/platform/common/: crypto-sodium.ads  crypto-x25519.adb
wireguard-baremetal/crypto/src/platform/esp_idf/: crypto-esp_idf.ads  crypto-x25519.adb
wireguard-baremetal/crypto/src/platform/host/: crypto-host.ads  crypto-random.adb
wireguard-baremetal/crypto/src/platform/libsodium/: crypto-platform.ads
wireguard-baremetal/net/: alire.toml  net.gpr
wireguard-baremetal/net/src/: net.ads
wireguard-baremetal/platform/: README.md
wireguard-baremetal/platform/common/include/: wg_buffer.h
wireguard-baremetal/platform/cortex_m/: CMakeLists.txt  cortex_m.c
wireguard-baremetal/platform/main/: CMakeLists.txt  Kconfig  README.md  idf_component.yml  main.c  udp_server.c  udp_server.h  wg_clock.c  wg_clock.h  wg_commands.c  wg_commands.h  wg_handshake.h  wg_keys.c  wg_keys.h  wg_netif.c  wg_netif.h  wg_session_timer.c  wg_session_timer.h  wg_task.c  wg_task.h  wg_timer_manager.c  wg_timer_manager.h  wg_urgent_task.c  wg_urgent_task.h  wifi_station.c  wireguard.h
wireguard-baremetal/tests/: .gitignore  README.md
wireguard-baremetal/tests/ada/: .gitignore  alire.toml  gnattest.ignore  tests.gpr
wireguard-baremetal/tests/ada/crypto/tests/: crypto-aead-test_data-tests.adb  crypto-aead-test_data-tests.ads  crypto-aead-test_data.adb  crypto-aead-test_data.ads  crypto-blake2-test_data-tests.adb  crypto-blake2-test_data-tests.ads  crypto-blake2-test_data.adb  crypto-blake2-test_data.ads  crypto-chacha20poly1305-test_data-tests.adb  crypto-chacha20poly1305-test_data-tests.ads  crypto-chacha20poly1305-test_data.adb  crypto-chacha20poly1305-test_data.ads  crypto-helper-test_data-tests.adb  crypto-helper-test_data-tests.ads  crypto-helper-test_data.adb  crypto-helper-test_data.ads  crypto-host-test_data-tests.adb  crypto-host-test_data-tests.ads  crypto-host-test_data.adb  crypto-host-test_data.ads  crypto-kdf-test_data-tests.adb  crypto-kdf-test_data-tests.ads  crypto-kdf-test_data.adb  crypto-kdf-test_data.ads  crypto-kx-test_data-tests.adb  crypto-kx-test_data-tests.ads  crypto-kx-test_data.adb  crypto-kx-test_data.ads  crypto-random-test_data-tests.adb  crypto-random-test_data-tests.ads  crypto-random-test_data.adb  crypto-random-test_data.ads  crypto-tai64n-test_data-tests.adb  crypto-tai64n-test_data-tests.ads  crypto-tai64n-test_data.adb  crypto-tai64n-test_data.ads  crypto-test_data-tests.adb  crypto-test_data-tests.ads  crypto-test_data.adb  crypto-test_data.ads  (+4 more)
wireguard-baremetal/tests/ada/src/: test_runner.adb  tests.adb  tests.ads
wireguard-baremetal/tests/ada/src/unit/: tests-unit-crypto.adb  tests-unit-crypto.ads  tests-unit-wireguard.adb  tests-unit-wireguard.ads  tests-unit.ads
wireguard-baremetal/tests/c/: .gitignore
wireguard-baremetal/tests/c/unit/: .gitkeep
wireguard-baremetal/tests/c/unity/: .gitkeep
wireguard-baremetal/tests/integration/: .gitignore  .gitkeep  README.md  conftest.py  pytest_auto_handshake.py  pytest_cookie.py  pytest_handshake.py  pytest_session.py  pytest_transport.py  pytest_veriguard.py  wg_noise.py  wg_session.py
wireguard-baremetal/wireguard/: Makefile  alire.toml  core.gpr  crypto.gpr  handshake.gpr  messages.gpr  net.gpr  peer_table.gpr  session.gpr  threads.gpr  timer.gpr  transport.gpr  utils.gpr  wireguard.gpr
wireguard-baremetal/wireguard/config/: ghost_check.adc
wireguard-baremetal/wireguard/src/: wg_types.ads  wireguard-protocol.adb  wireguard-protocol.ads  wireguard.adb  wireguard.ads
wireguard-baremetal/wireguard/src/bindings/: gnat_last_chance.c  packet_pool.adb  packet_pool.ads  packet_pool.h  wg_handshake.adb  wg_handshake.ads  wg_mutex.c  wg_mutex.h  wg_sessions.adb  wg_sessions.ads  wg_sessions.h
wireguard-baremetal/wireguard/src/bindings/Ada_Export/: gnat_last_chance.c  packet_pool.adb  packet_pool.ads  packet_pool.c  packet_pool.h  wg_peer_table.adb  (+7 more)
wireguard-baremetal/wireguard/src/crypto/: crypto.ads
wireguard-baremetal/wireguard/src/handshake/: handshake.adb  handshake.ads
wireguard-baremetal/wireguard/src/messages/: messages.adb  messages.ads
wireguard-baremetal/wireguard/src/net/: net.ads
wireguard-baremetal/wireguard/src/peer_table/: peer_table.adb  peer_table.ads
wireguard-baremetal/wireguard/src/session/: session-keys.adb  session-keys.ads  session-timers.adb  session-timers.adb.bak  session-timers.ads  session-timers.ads.bak  session.adb  session.adb.bak  session.ads  session.ads.bak  session_keys.adb  session_keys.ads
wireguard-baremetal/wireguard/src/threads/: threads.ads
wireguard-baremetal/wireguard/src/timer/: timer.ads
wireguard-baremetal/wireguard/src/transport/: replay.adb  replay.ads  transport.adb  transport.ads
wireguard-baremetal/wireguard/src/utils/: BUFFER_POOL.md  RING_BUFFER.md  utils-memory_pool.adb  utils-memory_pool.ads  utils-platform.ads  utils-result.adb  utils-result.ads  utils-ring_buffer.adb  utils-ring_buffer.ads  utils.adb  utils.ads
(+54 files in other folders)
